Refactored CSS and fixed scrollbar

--- a/css/general-style.css
+++ b/css/general-style.css
@@ -1,4 +1,4 @@
-/* Styling for About, Work, and Contact pages */
+/* General styles */
 * {
   margin: 0;
   padding: 0;
@@ -11,17 +11,18 @@ body {
   cursor: url("../assets/svg/cursor-black.svg"), auto;
   margin: 0px;
   padding: 0px;
-  background-size: auto 100%;
+  height: 100%;
+  width: 100%;
   background-position-x: 0px;
   animation: scroll 350s linear infinite;
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  padding-left: 32px;
-  padding-right: 32px;
 }
 
 /* Navigation bar styling */
 .nav-container {
+  top: 0px;
   position: fixed;
   align-items: center;
   justify-content: center;
@@ -80,20 +81,16 @@ body {
   height: 76px;
 }
 
-.about-content-container {
+.title-container {
   display: flex;
-  width: 750px;
+  width: 300px;
   flex-direction: column;
-  align-items: flex-start;
-  gap: 32px;
-  padding-top: 215px;
-  padding-bottom: 128px;
+  align-items: center;
+  text-align: center;
+  gap: 16px;
+  width: 100%;
 }
-.about-pic {
-  width: 268px;
-  height: 335.109px;
-  border-radius: 20px;
-}
+
 .text {
   color: #000;
   font-family: "PT Serif";
@@ -129,58 +126,9 @@ h3 {
   font-weight: 700;
   line-height: 32px; /* 160% */
 }
-.contentContainer {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 64px;
-  max-width: 750px;
-  padding-top: 215px;
-  padding-bottom: 128px;
-}
-.contactContainer {
-  display: flex;
-  flex-direction: column;
-  max-width: 750px;
-  justify-content: center;
-  align-items: center;
-  align-content: center;
-  gap: 32px;
-  flex-wrap: wrap;
-}
-.informationContainer {
-  display: flex;
-  flex-direction: row;
-  gap: 32px;
-}
-.handshake {
-  width: 100%;
-}
-.titleContainer {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 16px;
-  text-align: center;
-  max-width: 500px;
-}
-.titleAlignLeft {
-  text-align: left;
-  align-items: flex-start;
-  max-width: 750px;
-  min-width: 500px;
-}
-.underlineText {
-  text-decoration-line: underline;
-}
-.projectContainer {
-  display: flex;
-  padding: 32px;
-  max-width: 750px;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
-  border: 1px solid #d9d9d9;
+
+#menu-popup {
+  display: none;
 }
 
 @media only screen and (max-width: 600px) {
@@ -188,6 +136,7 @@ h3 {
   /* Adds navigation menu style for mobile devices */
   .nav-container {
     position: fixed;
+    top: 0;
     align-items: center;
     justify-content: center;
     display: flex;
@@ -241,7 +190,7 @@ h3 {
     background: rgba(255, 255, 255, 0.95);
     backdrop-filter: blur(2px);
     overflow-y: hidden;
-    position: absolute;
+    position: fixed;
     z-index: 1;
     display: none;
     top: 0;
@@ -273,24 +222,5 @@ h3 {
   }
   .nav-link {
     font-size: 0px;
-  }
-
-  body {
-    padding-left: 16px;
-    padding-right: 16px;
-  }
-
-  /* Add styling for about page for mobile devices */
-  .about-content-container {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 32px;
-    padding-top: 96px;
-    padding-bottom: 32px;
-  }
-  .about-pic {
-    width: 100%;
-    height: auto;
   }
 }
